# clinical_trials

./: .gitignore  README.md  pyproject.toml  search.sh
clinical_trials/: __init__.py
clinical_trials/api/: __init__.py  client.py  direct_client.py
clinical_trials/cli/: __init__.py  main.py
clinical_trials/models/: __init__.py  search.py  study.py
clinical_trials/utils/: __init__.py  formatters.py
data/: .gitkeep  eligibility_tracking.csv  entries_status.csv  raw_CAR_all.json
data/confirmed_hodgkins/: NCT02259556.json  NCT02917083.json  NCT03050268.json  NCT04288726.json  NCT05092451.json  NCT05948033.json  NCT06090864.json  NCT06176690.json  NCT06294652.json  NCT06494371.json  NCT06532643.json  NCT07138547.json  NCT07451054.json
